# runsvdir-magisk

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  README_zh.md  build.sh  dl-bins.sh  package-lock.json  package.json  package.sh
.devcontainer/: Dockerfile  android-ndk-env.sh  android-toolchain.cmake  devcontainer.json
.devcontainer/android-cross/: arm64-v8a.txt  armeabi-v7a.txt  x86.txt  x86_64.txt
.github/workflows/: build-and-release.yml  build.yml
magisk/: customize.sh  module.prop  post-fs-data.sh  sepolicy.rule  service.sh  uninstall.sh
magisk/stages/: 1  2  3
ref/: kernelsu-webui.md  magisk-guides.md
scripts/: start-services.sh  sv-disable  svlogger
src/: CMakeLists.txt  buffer_put.c  chpst.c  config.h  env.c  fd_copy.c  fifo.c  fmt_ptime.h  iopause.c  iopause.h  lock_ex.c  lock_exnb.c  ndelay_off.c  ndelay_on.c  open_append.c  open_read.c  open_trunc.c  open_write.c  openreadclose.c  pathexec_env.c  pathexec_run.c  prot.c  runsv.c  runsvchdir.c  runsvdir.c  sig.c  sig_block.c  sig_catch.c  sig_pause.c  stralloc_catb.c  stralloc_eady.c  stralloc_opyb.c  stralloc_pend.c  sv.c  svlogd.c  tai.h  taia_now.c  uidgid.c  wait_nohang.c  wait_pid.c
webui/: app.js  index.html  style.css
